# cross-traffic-web-calculator

./: .gitignore  .gitmodules  LICENSE.md  README.md  package-lock.json  package.json  postcss.config.cjs  supabase_db_create.sql  svelte.config.js  tailwind.config.cjs  tsconfig.json  vercel.json  vite.config.js  vite.config.js.timestamp-1711681054011-c27abc6e25a71.mjs
.github/workflows/: .github-ci.yml  format.yaml  format.yml  playwright.yaml  test.yml
HCM-middleware/: Cargo.toml
HCM-middleware/pkg/: HCM_middleware.d.ts  HCM_middleware.js  HCM_middleware_bg.wasm  HCM_middleware_bg.wasm.d.ts  package.json
HCM-middleware/src/: lib.rs
documents/: overall.md
src/: app.css  app.d.ts  app.html  hooks.server.ts  service-worker.ts  stores.ts
src/lib/: focus.ts  google.ts  report.js
src/lib/server/: sendgrid.ts  supabaseClient.ts
src/routes/: +error.svelte  +layout.js  +layout.server.ts  +layout.svelte  +layout.ts  +page.js  +page.svelte  Calc.svelte  Row.svelte  SubRow.svelte  __layout.svelte  hcm15.svelte  index.svelte
src/routes/Calc/: +page.svelte
src/routes/FacilityView/: +page.svelte
src/routes/FreewaySegment3D/: +page.svelte
src/routes/RoadDiagram/: +page.svelte
src/routes/Row/: +page.svelte
src/routes/SubRow/: +page.svelte
src/routes/admin/: +page.svelte
src/routes/chat/: +page.svelte
src/routes/guide/: +page.svelte
src/routes/hcm10/: +page.svelte
src/routes/hcm11/: +page.svelte
src/routes/hcm12/: +page.svelte
src/routes/hcm12ml/: +page.svelte
static/examples/: hcm12_basic_freeway.json
tests/: test.ts
(+27 files in other folders)
