[package]
name = "HCM-middleware"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Web application for HCM."
repository = "https://github.com/crosstraffic/cross-traffic-web-calculator"
exclude = [
    ".gitignore",
    "vscode/settings.json",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crosstraffic_middleware = "0.1.0"