[package]
name = "HCM-middleware"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Web application for HCM."
repository = "https://github.com/crosstraffic/cross-traffic-web-calculator"

[lib]
crate-type = ["cdylib", "rlib"]
vercel_runtime = { version = "1.1.0" }

[dependencies]
# Path resolves to the sibling checkout for local development; the version applies once 0.1.7 is published.

crosstraffic_middleware = { version = "0.1.7", path = "../../cross-traffic-middleware" }